<resources>
    <string name="app_name">near me</string>
    <string name="tab_item_map">map</string>
    <string name="tab_item_main">main</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password"><![CDATA[Password must be > 5 characters]]></string>
</resources>